--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  background-color: "#F9FAFB";
+}
+
+a {
+  cursor: pointer;
+}
